--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-#·şÎñ¶Ë¿Ú
+#æœåŠ¡ç«¯å£
 server.port=8888
-#Êı¾İÔ´µÄÅäÖÃ
-spring.datasource.url=jdbc:mysql://192.168.10.94:3306/elise_develop?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+#æ•°æ®æºçš„é…ç½®
+spring.datasource.url=jdbc:mysql://192.168.88.123:3306/proxy-pool?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=bYb123456.
+spring.datasource.password=admin_zsf
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.typeAliasesPackage=com.meow.proxy.entity
 mybatis.mapperLocations=classpath:mapper/*.xml
-#´úÀí²É¼¯Ê±¼äÖÜÆÚ(ms)
+#ä»£ç†é‡‡é›†æ—¶é—´å‘¨æœŸ(ms)
 com.meow.proxy.jobs.ScheduleJobs.proxyCrawl.period=5000
-#¼ì²âmysql¿âÖĞ´úÀíÊÇ·ñÓĞĞ§µÄÖÜÆÚ(ms)
+#æ£€æµ‹mysqlåº“ä¸­ä»£ç†æ˜¯å¦æœ‰æ•ˆçš„å‘¨æœŸ(ms)
 com.meow.proxy.jobs.ScheduleJobs.proxyRecheck.period=10000
-com.meow.proxy.configure.chromedriver.path = D:/java/phantomjs/chromedriver.exe
+com.meow.proxy.configure.chromedriver.path = /Users/zhushunfu/Downloads/chromedriver
