--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #服务端口
 server.port=8888
 #数据源的配置
-spring.datasource.url=jdbc:mysql://jeesys.com:3333/proxy-pool?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://192.168.88.123:3306/proxy-pool?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=admin_zsf
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
